--- a/Aplikasi/app/src/main/res/values/strings.xml
+++ b/Aplikasi/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Kidz Learn App</string>
+    <string name="logo_kidz_learn">Logo Kidz Learn</string>
 </resources>
